--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <artifactId>VaultAPI</artifactId>
             <version>1.7</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bukkit</groupId>
+                    <artifactId>bukkit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- WorldGuard -->
@@ -153,7 +159,7 @@
         <dependency>
             <groupId>com.github.Bestem0r</groupId>
             <artifactId>BestemorCore</artifactId>
-            <version>8943526179</version>
+            <version>75655c3bd6</version>
             <scope>compile</scope>
         </dependency>
 
