--- a/src/main/resources/es_ES.yml
+++ b/src/main/resources/es_ES.yml
@@ -165,21 +165,26 @@ menus:
   #-------------------- Buy Shop --------------------#
   buy_shop:
     title: "&8Compra la tienda disponible"
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       shop_size:
+        material: CHEST
+        slot: 12
         #Placeholders: %amount%
         name: "&a%amount%&7 Casillas de la tienda"
-        material: CHEST
         lore:
           - ""
       storage_size:
+        material: WRITABLE_BOOK
+        slot: 14
         #Placeholders: %amount%
         name: "&a%amount%&7 Casillas de guardado"
-        material: WRITABLE_BOOK
         lore:
           - ""
       buy_shop:
         material: EMERALD
+        slot: 13
         name: "&aCompra esta tienda!"
         lore:
         - "&7Haga clic para comprar esta tienda por &a%price%&7!"
@@ -190,10 +195,14 @@ menus:
   #-------------------- Edit Shop --------------------#
   edit_shop:
     title: "&8Editar la tienda"
+    size: 54
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
     items:
       #Edit items for sale item
       edit_shopfront:
         material: WRITABLE_BOOK
+        slot: 21
+        slot_admin: 22
         name: "&b Editar el mostrador de tu tienda"
         lore:
         - "&7Haga clic para editar los artículos de"
@@ -201,18 +210,23 @@ menus:
       #Preview shop item
       preview_shop:
         material: BOOK
+        slot: 23
+        slot_admin: 23
         name: "&eVista previa de la tienda"
         lore:
         - "&7Haga clic para obtener una vista previa de su mostrador"
       #Edit storage item
       edit_storage:
         material: CHEST
+        slot: 22
         name: "&cEditar el almacenamiento"
         lore:
         - "&7Haz clic para editar el almacenamiento de la tienda"
       #Edit villager item
       edit_villager:
         material: VILLAGER_SPAWN_EGG
+        slot: 30
+        slot_admin: 30
         name: "&eEditar al aldeano"
         lore:
         - "&7Haz clic para editar al"
@@ -220,18 +234,22 @@ menus:
       #Change villager name item
       change_name:
         material: NAME_TAG
+        slot: 32
+        slot_admin: 32
         name: "&eCambiar el nombre del aldeano"
         lore:
         - "&7Haz clic para editar el nombre"
       #Sell shop item
       sell_shop:
         material: FEATHER
+        slot: 31
         name: "&cVender/abandonar la tienda"
         lore:
         - "&7Haz clic para abandonar"
       #Collect money (this needs to be enabled in general settings)
       collect_money:
         material: GOLD_INGOT
+        slot: 41
         name: "&aRecolectar el dinero"
         #Placeholders: %worth%
         lore:
@@ -240,6 +258,7 @@ menus:
       #Add more time item
       increase_time:
         material: EMERALD
+        slot: 13
         name: "&aAumentar el tiempo de renta"
         #Placeholders: %expire%, %time%, %price%
         lore:
@@ -250,12 +269,14 @@ menus:
       #Enable trade notifications item
       enable_trade_notifications:
         material: RED_TERRACOTTA
+        slot: 40
         name: "&eNotificaciones comerciales: Deshabilitado"
         lore:
           - "&7Clic para habilitar las notificaciones comerciales"
       #Disable trade notifications item
       disable_trade_notifications:
         material: LIME_TERRACOTTA
+        slot: 40
         name: "&eNotificaciones comerciales: Habilitado"
         lore:
           - "&7Clic para deshabilitar las notificaciones comerciales"
@@ -450,79 +471,105 @@ menus:
   #------------------ Edit Villager ------------------#
   edit_villager:
     title: "&8Editar al aldeano"
+    size: 36
     #This requires citizens to be on the server
     citizens_item:
       material: PLAYER_HEAD
+      slot: 31
       name: "&eEstablecer Skin"
       lore:
       - "&7Clic para establecer Skin"
+    back_slot: 35
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 27, 28, 29, 30, 31, 32, 33, 34]
     items:
       armorer:
         material: IRON_CHESTPLATE
+        slot: 9
         name: "&7Armorer"
       butcher:
         material: PORKCHOP
+        slot: 10
         name: "&cButcher"
       cartographer:
         material: MAP
+        slot: 11
         name: "&bCartographer"
       cleric:
         material: POTION
+        slot: 12
         name: "&dCleric"
       farmer:
         material: WHEAT
+        slot: 13
         name: "&eFarmer"
       fisherman:
         material: COD
+        slot: 14
         name: "&bFisherman"
       fletcher:
         material: FLETCHING_TABLE
+        slot: 15
         name: "&eFletcher"
       leatherworker:
         material: LEATHER
+        slot: 16
         name: "&cLeatherworker"
       librarian:
         material: BOOK
+        slot: 17
         name: "&6Librarian"
       mason:
         material: BRICK
+        slot: 18
         name: "&cMason"
       nitwit:
         material: PAPER
+        slot: 19
         name: "&fNitwit"
       shepherd:
         material: WHITE_WOOL
+        slot: 20
         name: "&fShepherd"
       toolsmith:
         material: IRON_AXE
+        slot: 21
         name: "&7Tool Smith"
       weaponsmith:
         material: IRON_SWORD
+        slot: 22
         name: "&7Weapon Smith"
       none:
         material: VILLAGER_SPAWN_EGG
+        slot: 23
         name: "&cNone"
       #Legacy versions
       blacksmith:
         material: ANVIL
+        slot: 9
         name: "&7Blacksmith"
       priest:
         material: POTION
+        slot: 11
         name: "&dPriest"
       normal:
         material: VILLAGER_SPAWN_EGG
+        slot: 12
         name: "&cNone"
 
   #-------------------- Sell Shop --------------------#
   sell_shop:
     title: "&8Estas seguro"
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       no_cancel:
         material: RED_TERRACOTTA
+        slot: 14
         name: "&cNo, cancela"
       #If the Shop is reusable (created by command)
       yes_sell:
         material: LIME_TERRACOTTA
+        slot: 12
         name: "&aSi, vende la tienda"
         #Placeholders: %amount%
         lore:
@@ -533,6 +580,7 @@ menus:
       #If the Shop isn't reusable (created using a spawn egg)
       yes_remove:
         material: LIME_TERRACOTTA
+        slot: 12
         name: "&aSi, quita la tienda"
         lore:
         - "&7Esto &quita &7la tienda"
@@ -542,6 +590,10 @@ menus:
   #-------------------- Edit Item --------------------#
   edit_item:
     title: "&8Editar Item"
+    size: 54
+    item_slot: 4
+    filler_slots: [0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
+    back_slot: 53
     limit_cycle:
       player: "&eJugador&7 | Server"
       server: "&7Jugador |&e Server"
@@ -561,6 +613,7 @@ menus:
     items:
       mode:
         material: OAK_SIGN
+        slot: 22
         name: "&eModo&7: %mode%"
         #%cycle% is replaced with cycle values above
         lore:
@@ -568,11 +621,13 @@ menus:
         - "%cycle%"
       amount:
         material: CHEST
+        slot: 21
         name: "&eCantidad&7: &r%amount%"
         lore:
         - "&7Click para editar"
       price:
         material: GOLD_INGOT
+        slot: 23
         name: "&ePrecio&7: &r%price%"
         lore:
         - "&7Click para editar el precio"
@@ -587,11 +642,13 @@ menus:
           - "&7por un item en lugar de dinero"
       delete:
         material: BARRIER
+        slot: 49
         name: "&cQuitar"
         lore:
         - "&7Click para quitar el &7item"
       command:
         material: COMMAND_BLOCK
+        slot: 31
         name: "&eCommando"
         lore:
         - "&7Comandos actuales:"
@@ -601,11 +658,13 @@ menus:
         - "&7>> Derecha a restablecer"
       buy_limit:
         material: FEATHER
+        slot: 31
         name: "&Límite de compras&7: %limit%"
         lore:
         - "&7>> Click para editar"
       player_limit:
         material: PLAYER_HEAD
+        slot: 30
         name: "&eLímite de jugadores&7: &f%limit%"
         lore:
         - "&7>> Clic derecho para un ciclo:"
@@ -614,6 +673,7 @@ menus:
         - "&7>> Clic izquierdo para editar"
       limit_cooldown:
         material: CLOCK
+        slot: 32
         name: "&eLimite de enfriamiento&7: &f%cooldown%"
         lore:
         - "&7Próximo restablecimiento de límite: &e%next%"
@@ -622,6 +682,7 @@ menus:
         - "&7>> Haga clic derecho para &climpiar los &7limites"
       discount:
         material: EMERALD
+        slot: 13
         name: "&eDescuento&7: &f%discount%%"
         lore:
           - "&7Termina: &e%discount_end%"
@@ -629,12 +690,16 @@ menus:
           - "&7>> Clic para editar"
   confirm_action:
     title: "&8Estas seguro"
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       accept:
         material: GREEN_TERRACOTTA
+        slot: 12
         name: "&aSi, confirma"
       cancel:
         material: RED_TERRACOTTA
+        slot: 14
         name: "&cNo, cancela"
 
 
