--- a/src/main/resources/fr_FR.yml
+++ b/src/main/resources/fr_FR.yml
@@ -170,21 +170,26 @@ menus:
   #-------------------- Acheter une boutique --------------------#
   buy_shop:
     title: "&8Acheter une boutique disponible"
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       shop_size:
+        material: CHEST
+        slot: 12
         #Placeholders : %amount%
         name: "&a%amount%&7 emplacements de boutique"
-        material: CHEST
         lore:
         - ""
       storage_size:
+        material: WRITABLE_BOOK
+        slot: 14
         #Placeholders : %amount%
         name: "&a%amount%&7 emplacements de stockage"
-        material: WRITABLE_BOOK
         lore:
         - ""
       buy_shop:
         material: EMERALD
+        slot: 13
         name: "&aAcheter cette boutique !"
         lore:
         - "&7Cliquez pour acheter cette boutique pour &a%price%&7 !"
@@ -196,10 +201,14 @@ menus:
   #-------------------- Edit Shop --------------------#
   edit_shop:
     title: "&8Éditer la boutique"
+    size: 54
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
     items:
       # Modifier les articles en vente
       edit_shopfront:
         material: WRITABLE_BOOK
+        slot: 21
+        slot_admin: 22
         name: "&bModifier la vitrine"
         lore:
         - "&7Cliquez pour modifier les articles en vente"
@@ -207,18 +216,23 @@ menus:
       # Aperçu de la boutique
       preview_shop:
         material: BOOK
+        slot: 23
+        slot_admin: 23
         name: "&eAperçu de la boutique"
         lore:
         - "&7Cliquez pour prévisualiser votre vitrine"
       # Modifier les articles de stockage
       edit_storage:
         material: CHEST
+        slot: 22
         name: "&cModifier le stockage"
         lore:
         - "&7Cliquez pour modifier le stockage de la boutique"
       # Modifier l'article Villager
       edit_villager:
         material: VILLAGER_SPAWN_EGG
+        slot: 30
+        slot_admin: 30
         name: "&eModifier le villageois"
         lore:
         - "&7Cliquez pour modifier la profession"
@@ -226,12 +240,15 @@ menus:
       # Modifier le nom du villageois
       change_name:
         material: NAME_TAG
+        slot: 32
+        slot_admin: 32
         name: "&eModifier le nom du villageois"
         lore:
         - "&7Cliquez pour changer le nom de votre villageois"
       # Vendre/abandonner la boutique
       sell_shop:
         material: FEATHER
+        slot: 31
         name: "&cVendre/abandonner la boutique"
         lore:
         - "&7Cliquez pour abandonner cette"
@@ -239,6 +256,7 @@ menus:
       # Collecter de l'argent (cette fonctionnalité doit être activée dans les paramètres généraux)
       collect_money:
         material: GOLD_INGOT
+        slot: 41
         name: "&aCollecter de l'argent"
         #Placeholders: %worth%
         lore:
@@ -246,6 +264,7 @@ menus:
       # Ajouter plus de temps
       increase_time:
         material: EMERALD
+        slot: 13
         name: "&aAugmenter la durée de location"
         # Placeholders : %expire%, %time%, %price%
         lore:
@@ -257,6 +276,7 @@ menus:
       # Activer les notifications de commerce
       enable_trade_notifications:
         material: RED_TERRACOTTA
+        slot: 40
         name: "&eNotifications de commerce&7 : &cDésactivées"
         lore:
         - "&7Cliquez pour activer les notifications de commerce"
@@ -264,6 +284,7 @@ menus:
       # Désactiver les notifications de commerce
       disable_trade_notifications:
         material: LIME_TERRACOTTA
+        slot: 40
         name: "&eNotifications de commerce&7 : &aActivées"
         lore:
         - "&7Cliquez pour désactiver les notifications de commerce"
@@ -474,80 +495,106 @@ menus:
   #------------------ Modifier le villageois ------------------#
   edit_villager:
     title: "&8Éditer le villageois"
+    size: 36
     # Cela nécessite que le plugin Citizens soit installé sur le serveur
     citizens_item:
       material: PLAYER_HEAD
+      slot: 31
       name: "&eChanger l'apparence"
       lore:
       - "&7Cliquez pour changer l'apparence du joueur pour cette boutique"
+    back_slot: 35
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 27, 28, 29, 30, 31, 32, 33, 34]
     items:
       armorer:
         material: IRON_CHESTPLATE
+        slot: 9
         name: "&7Armurier"
       butcher:
         material: PORKCHOP
+        slot: 10
         name: "&cBoucher"
       cartographer:
         material: MAP
+        slot: 11
         name: "&bCartographe"
       cleric:
         material: POTION
+        slot: 12
         name: "&dClerc"
       farmer:
         material: WHEAT
+        slot: 13
         name: "&eFermier"
       fisherman:
         material: COD
+        slot: 14
         name: "&bPêcheur"
       fletcher:
         material: FLETCHING_TABLE
+        slot: 15
         name: "&eFlèchier"
       leatherworker:
         material: LEATHER
+        slot: 16
         name: "&cTravailleur du cuir"
       librarian:
         material: BOOK
+        slot: 17
         name: "&6Bibliothécaire"
       mason:
         material: BRICK
+        slot: 18
         name: "&cMaçon"
       nitwit:
         material: PAPER
+        slot: 19
         name: "&fStupide"
       shepherd:
         material: WHITE_WOOL
+        slot: 20
         name: "&fBerger"
       toolsmith:
         material: IRON_AXE
+        slot: 21
         name: "&7Forgeron d'outils"
       weaponsmith:
         material: IRON_SWORD
+        slot: 22
         name: "&7Forgeron d'armes"
       none:
         material: VILLAGER_SPAWN_EGG
+        slot: 23
         name: "&cAucun"
       # Versions obsolètes
       blacksmith:
         material: ANVIL
+        slot: 9
         name: "&7Forgeron"
       priest:
         material: POTION
+        slot: 11
         name: "&dPrêtre"
       normal:
         material: VILLAGER_SPAWN_EGG
+        slot: 12
         name: "&cAucun"
 
   
   #-------------------- Boutique de vente --------------------#
   sell_shop:
     title: "&8Êtes-vous sûr ?"
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       no_cancel:
         material: RED_TERRACOTTA
+        slot: 14
         name: "&cNon, annuler"
       # Si la boutique est réutilisable (créée par commande)
       yes_sell:
         material: LIME_TERRACOTTA
+        slot: 12
         name: "&aOui, vendre la boutique"
         # Placeholders : %amount%
         lore:
@@ -558,15 +605,20 @@ menus:
       # Si la boutique n'est pas réutilisable (créée avec un œuf d'apparition)
       yes_remove:
         material: LIME_TERRACOTTA
+        slot: 12
         name: "&aOui, supprimer la boutique"
         lore:
         - "&7Cela &csupprimera &7la"
         - "&7Villager Shop et vous donnera"
         - "&7un nouvel œuf d'apparition de boutique !"
 
-  
+  #-------------------- Edit Item --------------------#
   edit_item:
     title: "&8Éditer l'objet"
+    size: 54
+    item_slot: 4
+    filler_slots: [0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
+    back_slot: 53
     limit_cycle:
       player: "&eJoueur&7 | Serveur"
       server: "&7Joueur |&e Serveur"
@@ -587,6 +639,7 @@ menus:
     items:
       mode:
         material: OAK_SIGN
+        slot: 22
         name: "&eMode&7: %mode%"
         #%cycle% is replaced with cycle values above
         lore:
@@ -594,11 +647,13 @@ menus:
         - "%cycle%"
       amount:
         material: CHEST
+        slot: 21
         name: "&eAmount&7: &r%amount%"
         lore:
         - "&7Click to edit"
       price:
         material: GOLD_INGOT
+        slot: 23
         name: "&ePrice&7: &r%price%"
         lore:
         - "&7Click to edit price"
@@ -613,11 +668,13 @@ menus:
         - "&7for item instead of money"
       delete:
         material: BARRIER
+        slot: 49
         name: "&cRemove"
         lore:
         - "&7Click to &cremove &7item"
       command:
         material: COMMAND_BLOCK
+        slot: 31
         name: "&eCommand"
         lore:
         - "&7Current command(s):"
@@ -627,11 +684,13 @@ menus:
         - "&7>> Right click to reset"
       buy_limit:
         material: FEATHER
+        slot: 31
         name: "&eBuy Limit&7: %limit%"
         lore:
         - "&7>> Click to edit"
       player_limit:
         material: PLAYER_HEAD
+        slot: 30
         name: "&ePlayer Limit&7: &f%limit%"
         lore:
         - "&7>> Right click to cycle:"
@@ -640,6 +699,7 @@ menus:
         - "&7>> Left click to edit"
       limit_cooldown:
         material: CLOCK
+        slot: 32
         name: "&eLimit cooldown&7: &f%cooldown%"
         lore:
         - "&7Next limit reset: &e%next%"
@@ -648,6 +708,7 @@ menus:
         - "&7>> Right click to &cclear &7limits"
       discount:
         material: EMERALD
+        slot: 13
         name: "&eDiscount&7: &f%discount%%"
         lore:
         - "&7Ends: &e%discount_end%"
@@ -655,12 +716,16 @@ menus:
         - "&7>> Click to edit"
   confirm_action:
     title: "&8Êtes-vous sûr ?"
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       accept:
         material: GREEN_TERRACOTTA
+        slot: 12
         name: "&aOui, confirmer"
       cancel:
         material: RED_TERRACOTTA
+        slot: 14
         name: "&cNon, annuler"
 
   
