--- a/src/main/resources/zh_CN.yml
+++ b/src/main/resources/zh_CN.yml
@@ -165,21 +165,26 @@ menus:
   #-------------------- 购买 Shop --------------------#
   buy_shop:
     title: "&8购买可用商店"
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       shop_size:
-        #Placeholders: %amount%
-        name: "&a%amount%&7 格货架"
         material: CHEST
+        name: "&a%amount%&7 格货架"
+        #Placeholders: %amount%
+        slot: 12
         lore:
           - ""
       storage_size:
+        material: WRITABLE_BOOK
+        slot: 14
         #Placeholders: %amount%
         name: "&a%amount%&7 格库存"
-        material: WRITABLE_BOOK
         lore:
           - ""
       buy_shop:
         material: EMERALD
+        slot: 13
         name: "&a购买该商店!"
         lore: #Placeholders: %price%, %time%
           - "&7点击以 &a%price%&7 的价格购买该商店!"
@@ -189,46 +194,59 @@ menus:
   #-------------------- Edit Shop --------------------#
   edit_shop:
     title: "&8编辑商店"
+    size: 54
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
     items:
       #Edit items for sale item
       edit_shopfront:
         material: WRITABLE_BOOK
+        slot: 21
+        slot_admin: 22
         name: "&b编辑货架"
         lore:
           - "&7点击编辑商店中出售的物品"
       #Preview shop item
       preview_shop:
         material: BOOK
+        slot: 23
+        slot_admin: 23
         name: "&e预览商店"
         lore:
           - "&7点击预览商店货架"
       #Edit storage item
       edit_storage:
         material: CHEST
+        slot: 22
         name: "&c编辑库存"
         lore:
           - "&7点击编辑商店库存"
       #Edit villager item
       edit_villager:
         material: VILLAGER_SPAWN_EGG
+        slot: 30
+        slot_admin: 30
         name: "&e编辑村民"
         lore:
           - "&7点击编辑村民职业"
       #Change villager name item
       change_name:
         material: NAME_TAG
+        slot: 32
+        slot_admin: 32
         name: "&e编辑名称"
         lore:
           - "&7点击修改村民的名称"
       #出售 shop item
       sell_shop:
         material: FEATHER
+        slot: 31
         name: "&c出售/遗弃商店"
         lore:
           - "&7点击转让该商店!"
       #Collect money (this needs to be enabled in general settings)
       collect_money:
         material: GOLD_INGOT
+        slot: 41
         name: "&a收集金币"
         #Placeholders: %worth%
         lore:
@@ -236,6 +254,7 @@ menus:
       #Add more time item
       increase_time:
         material: EMERALD
+        slot: 13
         name: "&a延长租期"
         #Placeholders: %expire%, %time%, %price%
         lore:
@@ -245,12 +264,14 @@ menus:
       #Enable trade notifications item
       enable_trade_notifications:
         material: RED_TERRACOTTA
+        slot: 40
         name: "&e交易提醒&7: &c禁用"
         lore:
           - "&7点击启用交易提醒"
       #Disable trade notifications item
       disable_trade_notifications:
         material: LIME_TERRACOTTA
+        slot: 40
         name: "&e交易提醒&7: &a启用"
         lore:
           - "&7点击禁用交易提醒"
@@ -444,79 +465,105 @@ menus:
   #------------------ Edit Villager ------------------#
   edit_villager:
     title: "&8编辑村民"
+    size: 36
     #This requires citizens to be on the server
     citizens_item:
       material: PLAYER_HEAD
+      slot: 31
       name: "&e设置皮肤"
       lore:
         - "&7点击设置该商店的玩家皮肤"
+    back_slot: 35
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 27, 28, 29, 30, 31, 32, 33, 34]
     items:
       armorer:
         material: IRON_CHESTPLATE
+        slot: 9
         name: "&7盔甲匠"
       butcher:
         material: PORKCHOP
+        slot: 10
         name: "&c屠夫"
       cartographer:
         material: MAP
+        slot: 11
         name: "&b制图师"
       cleric:
         material: POTION
+        slot: 12
         name: "&d牧师"
       farmer:
         material: WHEAT
+        slot: 13
         name: "&e牧民"
       fisherman:
         material: COD
+        slot: 14
         name: "&b渔夫"
       fletcher:
         material: FLETCHING_TABLE
+        slot: 15
         name: "&e制箭师"
       leatherworker:
         material: LEATHER
+        slot: 16
         name: "&c皮匠"
       librarian:
         material: BOOK
+        slot: 17
         name: "&6图书管理员"
       mason:
         material: BRICK
+        slot: 18
         name: "&c泥瓦匠"
       nitwit:
         material: PAPER
+        slot: 19
         name: "&f傻子"
       shepherd:
         material: WHITE_WOOL
+        slot: 20
         name: "&f牧羊人"
       toolsmith:
         material: IRON_AXE
+        slot: 21
         name: "&7工具匠"
       weaponsmith:
         material: IRON_SWORD
+        slot: 22
         name: "&7武器匠"
       none:
         material: VILLAGER_SPAWN_EGG
+        slot: 23
         name: "&c无"
       #Legacy versions
       blacksmith:
         material: ANVIL
+        slot: 9
         name: "&7铁匠"
       priest:
         material: POTION
+        slot: 11
         name: "&d圣职者"
       normal:
         material: VILLAGER_SPAWN_EGG
+        slot: 12
         name: "&c无"
 
   #-------------------- 出售 Shop --------------------#
   sell_shop:
     title: "&8确认此操作?"
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       no_cancel:
         material: RED_TERRACOTTA
+        slot: 14
         name: "&c否, 返回上一界面"
       #If the Shop is reusable (created by command)
       yes_sell:
         material: LIME_TERRACOTTA
+        slot: 12
         name: "&a是, 确认本次操作"
         #Placeholders: %amount%
         lore:
@@ -527,6 +574,7 @@ menus:
       #If the Shop isn't reusable (created using a spawn egg)
       yes_remove:
         material: LIME_TERRACOTTA
+        slot: 12
         name: "&a是, 删除商店"
         lore:
           - "&7这将会完全&c移除&7村民商店"
@@ -535,6 +583,10 @@ menus:
   #-------------------- Edit Item --------------------#
   edit_item:
     title: "&8编辑物品"
+    size: 54
+    item_slot: 4
+    filler_slots: [0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
+    back_slot: 53
     limit_cycle:
       player: "&e玩家&7 | 服务器"
       server: "&7玩家 |&e 服务器"
@@ -554,6 +606,7 @@ menus:
     items:
       mode:
         material: OAK_SIGN
+        slot: 22
         name: "&e模式&7: %mode%"
         #%cycle% is replaced with cycle values above
         lore:
@@ -561,11 +614,13 @@ menus:
           - "%cycle%"
       amount:
         material: CHEST
+        slot: 21
         name: "&e数量&7: &r%amount%"
         lore:
           - "&7点击编辑"
       price:
         material: GOLD_INGOT
+        slot: 23
         name: "&e价格&7: &r%price%"
         lore:
           - "&7点击编辑价格"
@@ -578,11 +633,13 @@ menus:
           - "&7>> 带物品点击将其改为以物易物"
       delete:
         material: BARRIER
+        slot: 49
         name: "&c移除物品"
         lore:
           - "&7点击&c移除&7该物品"
       command:
         material: COMMAND_BLOCK
+        slot: 31
         name: "&e命令"
         lore:
           - "&7当前命令:"
@@ -592,11 +649,13 @@ menus:
           - "&7>> 右键点击清空"
       buy_limit:
         material: FEATHER
+        slot: 31
         name: "&e购买限制&7: %limit%"
         lore:
           - "&7>> 点击编辑"
       player_limit:
         material: PLAYER_HEAD
+        slot: 30
         name: "&e玩家限制&7: &f%limit%"
         lore:
           - "&7>> 右键点击切换:"
@@ -605,6 +664,7 @@ menus:
           - "&7>> 左键点击编辑"
       limit_cooldown:
         material: CLOCK
+        slot: 32
         name: "&e限制冷却&7: &f%cooldown%"
         lore:
           - "&7下次冷却重置时间: &e%next%"
@@ -613,6 +673,7 @@ menus:
           - "&7>> 右键点击&c移除&7冷却"
       discount:
         material: EMERALD
+        slot: 13
         name: "&e折扣比例&7: &f%discount%%"
         lore:
           - "&7结束时间: &e%discount_end%"
@@ -620,12 +681,16 @@ menus:
           - "&7>> 点击编辑"
   confirm_action:
     title: "&8是否进行该操作?"
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       accept:
         material: GREEN_TERRACOTTA
+        slot: 12
         name: "&a是, 确认本次操作"
       cancel:
         material: RED_TERRACOTTA
+        slot: 14
         name: "&c否, 取消本次操作"
 
 
