Fix incorrect slots, player shop error

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,7 +3,7 @@
 #Villager Market"s message prefix
 plugin_prefix: "&8[&aVM&8]&r"
 #Should configuration be auto-updated?
-auto_update: false
+auto_update: true
 #How much (%) should shop owner get refunded when selling shop
 refund_percent: 50.0
 #How often should villager shops auto-save? (minutes)
