--- a/src/main/resources/en_US.yml
+++ b/src/main/resources/en_US.yml
@@ -592,7 +592,7 @@ menus:
     title: "&8Edit Item"
     size: 54
     item_slot: 4
-    filler_slots: [0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
+    filler_slots: [0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
     back_slot: 53
     limit_cycle:
       player: "&ePlayer&7 | Server"
