Fix 1.12 support, German translation

--- a/src/main/resources/config_mappings.yml
+++ b/src/main/resources/config_mappings.yml
@@ -8,6 +8,7 @@
   BLOCK_ANVIL_DESTROY: ANVIL_DESTROY
 legacy:
   GRAY_STAINED_GLASS_PANE: STAINED_GLASS_PANE:7
+  GREEN_TERRACOTTA: STAINED_CLAY:13
   WRITABLE_BOOK: BOOK_AND_QUILL
   VILLAGER_SPAWN_EGG: MONSTER_EGG:120
   PLAYER_HEAD: SKULL_ITEM:3
