--- a/src/main/resources/de_DE.yml
+++ b/src/main/resources/de_DE.yml
@@ -560,13 +560,17 @@ menus:
   #-------------------- Sell Shop --------------------#
   sell_shop:
     title: '&8Bist du dir sicher?'
+    size: 27
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
     items:
       no_cancel:
         material: RED_TERRACOTTA
+        slot: 14
         name: '&cNein, abbrechen.'
       #If the Shop is reusable (created by command)
       yes_sell:
         material: LIME_TERRACOTTA
+        slot: 12
         name: '&aJa, Shop verkaufen.'
         #Placeholders: %amount%
         lore:
@@ -577,6 +581,7 @@ menus:
       #If the Shop isn't reusable (created using a spawn egg)
       yes_remove:
         material: LIME_TERRACOTTA
+        slot: 12
         name: '&aJa, Shop verkaufen.'
         lore:
         - '&7Dadurch wird der VillagerShop'
