--- a/src/main/resources/en_US.yml
+++ b/src/main/resources/en_US.yml
@@ -112,7 +112,7 @@ messages:
   limits_cleared: "&cLimits cleared!"
   name_blacklisted: "&cYou are not allowed to use this shop name!"
   max_item_price: "&cItem price too high! Please retry with a lower price."
-  shopfront_cooldown: "&cPlease wait before buying/selling again!"
+  shopfront_cooldown: "&cPlease wait before clicking again!"
   max_name_length: "&cThis name is too long! Maximum name length is %limit% characters."
   clone_shop: "&7Right click the &bVillager Shop &7you want to clone."
   shop_cloned: "&aVillager Shop successfully cloned. Move it using &e/vm move&a."
