--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -20,6 +20,7 @@ softdepend:
   - Towny
   - NBTApi
   - Lands
+  - UltraEconomy
 commands:
   vm:
     description: List all Villager Market commands
