--- a/src/main/resources/de_DE.yml
+++ b/src/main/resources/de_DE.yml
@@ -284,7 +284,7 @@ menus:
 
   #-------------------- Shopfront --------------------#
   shopfront:
-    title: '&7%shop%'
+    title: '&8%shop%'
     #Placeholders: %item_name%, %mode%
     item_name: '&f%item_name% %mode%'
     detail_suffix: '&8(Details)'
@@ -688,6 +688,19 @@ menus:
           - "&7Endet: &e%discount_end%"
           - ""
           - '&7>> Klicke, um zu bearbeiten'
+      custom_amount_enabled:
+        material: LIME_TERRACOTTA
+        slot: 40
+        name: "&eEigene Menge&7: &aAktiviert"
+        lore:
+          - "&7Klicken, um eigene Menge zu deaktivieren"
+      custom_amount_disabled:
+        material: RED_TERRACOTTA
+        slot: 40
+        name: "&eEigene Menge&7: &cDeaktiviert"
+        lore:
+          - "&7Klicken, um eigene Menge zu aktivieren"
+
   confirm_action:
     title: '&8Bist du dir sicher?'
     size: 27
@@ -701,6 +714,60 @@ menus:
         material: RED_TERRACOTTA
         slot: 14
         name: '&cNein, abbrechen.'
+  buy_item:
+    title_buy: "&8Gegenstand kaufen"
+    title_sell: "&8Gegenstand verkaufen"
+    title_trade: "&8Gegenstand tauschen"
+    title_command: "&8Befehl kaufen"
+    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 14, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    back_slot: 26
+    size: 27
+    confirm_slot: 13
+    items:
+      increase_one:
+        material: LIME_TERRACOTTA
+        slot: 15
+        name: "&aUm 1 erhöhen"
+        lore:
+          - "&7Klicken, um die Menge um eins zu erhöhen"
+      increase_stack:
+        material: LIME_TERRACOTTA
+        slot: 16
+        amount: 64
+        name: "&aUm Stapel erhöhen"
+        lore:
+          - "&7Klicken, um die Menge um 64 zu erhöhen"
+      increase_max:
+        material: EMERALD_BLOCK
+        slot: 4
+        name: "&aAuf Maximum erhöhen"
+        lore:
+          - "&7Klicken, um die Menge auf Maximum zu erhöhen"
+      decrease_one:
+        material: RED_TERRACOTTA
+        slot: 10
+        name: "&cUm 1 verringern"
+        lore:
+          - "&7Klicken, um die Menge um eins zu verringern"
+      decrease_stack:
+        material: RED_TERRACOTTA
+        slot: 11
+        amount: 64
+        name: "&cUm Stapel verringern"
+        lore:
+          - "&7Klicken, um die Menge um 64 zu verringern"
+      toggle_sell:
+        material: BOOK
+        slot: 22
+        name: "&7Verkaufen | &eKaufen"
+        lore:
+          - "&7Klicken, um zum Verkaufen zu wechseln"
+      toggle_buy:
+        material: BOOK
+        name: "&eVerkaufen &7| Kaufen"
+        slot: 22
+        lore:
+          - "&7Klicken, um zum Kaufen zu wechseln"
   
   
   #-------------------- Expired Storage --------------------#
